// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitUtilities getGitAuthorizationHeaderAsync normalizes basic-auth extraheader with a GitHub App token 1`] = `
Array [
  "[    log] > git config --get-regexp http\\\\..*\\\\.extraheader[n]",
]
`;

exports[`GitUtilities getGitAuthorizationHeaderAsync throws when git config output has no header value 1`] = `
Array [
  "[    log] > git config --get-regexp http\\\\..*\\\\.extraheader[n]",
]
`;

exports[`GitUtilities getGitAuthorizationHeaderAsync throws when header line is missing colon 1`] = `
Array [
  "[    log] > git config --get-regexp http\\\\..*\\\\.extraheader[n]",
]
`;

exports[`GitUtilities getRepoSlugAsync extracts slug from HTTPS remote without .git suffix 1`] = `
Array [
  "[    log] > git remote get-url origin[n]",
]
`;

exports[`GitUtilities getRepoSlugAsync extracts slug from SSH remote with dotted repository name 1`] = `
Array [
  "[    log] > git remote get-url origin[n]",
]
`;

exports[`GitUtilities getRepoSlugAsync throws for non-GitHub remote URL 1`] = `
Array [
  "[    log] > git remote get-url origin[n]",
]
`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader decodes basic-auth with x-access-token prefix to "token" scheme 1`] = `Array []`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader is idempotent — applying it twice produces the same result as once 1`] = `Array []`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader passes through a "bearer" header unchanged 1`] = `Array []`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader passes through an already-normalized "token" header unchanged 1`] = `Array []`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader trims leading and trailing whitespace 1`] = `Array []`;

exports[`GitUtilities normalizeGitHubAuthorizationHeader wraps a raw token with "token" scheme 1`] = `Array []`;
